# archivematica-storage-service

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.DOCKER.md  README.md  README.rst  docker-compose.yml  jenkins-test.txt  mypy.ini  osdeps.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  ruff.toml  setup.py  tox.ini  trigger.txt
.github/workflows/: generate-sbom.yml  integration.yml  push-images.yml  test.yml
.tx/: config
debian/: archivematica-storage-service.install  changelog  control  copyright  dirs  postinst  postrm  preinst  rules
docs/: Makefile  administrators.rst  conf.py  contents.rst  index.rst  install.rst  recovery.rst  requirements.txt  search.rst  users.rst
docs/source/: conf.py  index.rst
install/: .storage-service  README.md  archivematica-storage-service.conf  make_key.py  nginx.conf  storage  storage-service.gunicorn-config.py  storage.ini  storageService.logging.json
integration/: conftest.py  docker-compose.yml  run.sh  test_integration.py
integration/fixtures/: 20200513054116-5658e603-277b-4292-9b58-20bf261c8f88.7z
osdeps/: CentOS-7.json  RedHat-7.json  Rocky-8.json  Ubuntu-14.json  Ubuntu-16.json  Ubuntu-18.json  Ubuntu-20.json  Ubuntu-22.json
requirements/: Makefile  base-py3.txt  base.in  base.txt  local-py3.in  local-py3.txt  local.in  local.txt  production-py3.in  production-py3.txt  production.in  production.txt  swift.txt  test-py3.in  test-py3.txt  test.in  test.txt
scripts/: checkformigrations.sh
storage_service/: .coveragerc  __init__.py  irods.readme.rst  manage.py  pytest.ini  testirods.py
storage_service/administration/: apps.py  forms.py  models.py  roles.py  urls.py  validators.py  views.py
storage_service/chtest/: consumers.py
storage_service/common/: __init__.py  apps.py  backends.py  compression_management.py  constants.py  context_processors.py  decorators.py  fields.py  gpgutils.py  helpers.py  middleware.py  models.py  premis.py  signals.py  startup.py  tar_new_volume.sh  utils.py  verify_fs.sh  version.py  which.py
storage_service/locations/: admin.py  apps.py  constants.py  datatable_utils.py  forms.py  metrics.py  models.py  signals.py  tasks.py  urls.py  views.py
storage_service/storage_service/: __init__.py  asgi.py  celery.py  ch_urls.py  default.db  signals.py  urls.py  views.py  wsgi.py
storage_service/templates/: 403.html  404.html  500.html  base.html  fluid.html  index.html  logged_out.html  login.html
tests/administration/: test_languages.py  test_roles.py  test_views.py
tests/common/: conftest.py  test_command_import_aip.py  test_command_populate_aip_stored_dates.py  test_premis.py  test_utils.py
tests/integration/: conftest.py  docker-compose.yml  run.sh  test_integration.py  test_oidc_auth.py
tests/locations/: test_api.py  test_archipelago.py  test_arkivum.py  test_datatable.py  test_dataverse.py  test_dspace.py  test_dspace_rest.py  test_fixity_log.py  test_forms.py  test_gpg.py  test_locations.py  test_lockssomatic.py  test_s3.py  (+8 more)
(+425 files in other folders)
